--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-12-08	Nick Schermer <nick@xfce.org>
 
+	* mousepad/mousepad-{dialog,window}.c: Show save as button in
+	  question dialog for readonly documents. Also add the modified
+	  readonly documents to the save-as queue when running save all.
+
+
+2007-12-08	Nick Schermer <nick@xfce.org>
+
 	* mousepad/mousepad-{search-bar,window}.c: Remove highlight when
 	  hiding the search bar. Search ahead when opening the search bar.
 
